wdl-analysis/tests/validation/duplicate-meta/source.errors
error: conflicting task name `t`
   ┌─ tests/validation/duplicate-meta/source.wdl:18:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
18 │ task t {
   │      ^ this task conflicts with a previously used name

